# solverNS

./: .gitignore  CMakeLists.txt  Readme  compile.sh  compileAndRun.sh
app/: main.cpp  solverNS
app/allMains/: main_ChFPD.cpp  main_ChFVD.cpp  main_TChF.cpp
app/allMains/ChF_PD/: main.cpp
app/allMains/ChF_VD/: main.cpp
app/allMains/DHC/: main.cpp
app/allMains/TChF/: main.cpp
app/allMains/TDHC/: main.cpp  mainAverages.cpp
app/allMains/TGV/: main.cpp
app/allMains/TGV_SP/: main.cpp
app/mainIncludes/: initializeChannelFlowLaminar.h  initializeChannelFlowReTau180.h  initializeChannelFlowReTau180_new.h
output/: simResults.vtk
src/IO/: writePressureVelocity2TXT.cpp  writePressureVelocity2TXT.h  writePressureVelocity2VTK.cpp  writePressureVelocity2VTK.h  writeTurbulentChannelFlowData2CSV.cpp  writeTurbulentChannelFlowData2CSV.h  writeTurbulentChannelFlowData2TXT.cpp  writeTurbulentChannelFlowData2TXT.h  writeTurbulentChannelFlowData2VTK.cpp  writeTurbulentChannelFlowData2VTK.h
src/IO/in/: readCSV.cpp  readCSV.h
src/IO/turbulentChannelFlow/: writeTurbulentChannelFlowData.cpp  writeTurbulentChannelFlowData.h  writeTurbulentChannelFlowData2CSV.cpp  writeTurbulentChannelFlowData2CSV.h  writeTurbulentChannelFlowData2VTK.cpp  writeTurbulentChannelFlowData2VTK.h  writeTurbulentChannelFlowSetUp.cpp  writeTurbulentChannelFlowSetUp.h
src/boundaryConditions/scalarBoundaryConditions/: ScalarBoundaryConditions.cpp  ScalarBoundaryConditions.h  addBC.cpp
src/boundaryConditions/vectorBoundaryConditions/: VectorBoundaryConditions.cpp  VectorBoundaryConditions.h  addBC.cpp
src/fields/scalarField/: ScalarField.cpp  ScalarField.h  initialize.cpp  initializeFromDifferentMesh.cpp  initializeFromDifferentMesh.h  initializeFromSelectedTime.cpp  initializeFromSelectedTime.h  mag.cpp  max.cpp  maxAbs.cpp  min.cpp  rms.cpp  writeScalarField2VTK.cpp
src/fields/tensorField/: TensorField.cpp  TensorField.h
src/fields/vectorField/: VectorField.cpp  VectorField.h  applyBCs.cpp  initialize.cpp  initializeFromSelectedTime.cpp  initializeFromSelectedTime.h  initializeTaylorGreenVortex.cpp  initializeTaylorGreenVortex.h  initializeTurbulentChannelFlowReTau180.cpp  initializeTurbulentChannelFlowReTau180.h  interpolateFromDifferentMesh.cpp  interpolateFromDifferentMesh.h  maxAbs.cpp  writeVectorField2VTK.cpp
src/finiteVolumeMethod/fvScalarEquation/: FvScalarEquation.cpp  FvScalarEquation.h  changeSign.cpp  constrain.cpp  perturb.cpp  solve.cpp
src/finiteVolumeMethod/fvc/: buyoancy.cpp  convective.cpp  convective.h  convectiveOrthogonal.cpp  convectiveOrthogonal.h  curl.cpp  divergence.cpp  divergence.h  divergenceNVS.cpp  forcingTerm.cpp  fvc.h  gradient.cpp  laplacian.cpp  laplacian.h  laplacianOrthogonal.cpp  laplacianOrthogonal.h
src/finiteVolumeMethod/fvm/: fvm.h  laplacianOrthogonal.cpp  laplacianOrthogonal.h
src/functionObjects/computeBulkVelocity/: computeBulkVelocity.cpp  computeBulkVelocity.h
src/functionObjects/computeEk/: computeEk.cpp  computeEk.h
src/functionObjects/computeEkFull/: computeEkFull.cpp  computeEkFull.h
src/functionObjects/computeEnsotrophy/: computeEnsotrophy.cpp  computeEnsotrophy.h
src/functionObjects/computeLaminarDHCResults/: computeLaminarDHCResults.cpp  computeLaminarDHCResults.h
src/functionObjects/computeQCrit/: computeQCrit.cpp  computeQCrit.h
src/functionObjects/probe/: Probe.cpp  Probe.h  assign.cpp  writeField.cpp
src/interpolation/convectiveSchemes/: convectiveSchemesOrthogonal.cpp  convectiveSchemesOrthogonal.h  interpolateCDS_Orthogonal.cpp  interpolateDDS.cpp  interpolateQUICK_Orthogonal.cpp  interpolateSMART_Orthogonal.cpp  interpolateSP.cpp  interpolateSUDS_Orthogonal.cpp  interpolateUDS.cpp
src/interpolation/interpolateFromElements2Nodes/: interpolateScalarFieldFromElements2Nodes.cpp  interpolateScalarFieldFromElements2Nodes.h  interpolateVectorFieldFromElements2Nodes.cpp  interpolateVectorFieldFromElements2Nodes.h
src/interpolation/interpolateMDotFromElements2Faces/: RhieChowInterpolation.cpp  RhieChowInterpolation.h
src/interpolation/temporalAdvancement/: computeTimeStepOrthogonal.cpp  computeTimeStepOrthogonal.h
src/math/geometricVector/: GeometricVector.cpp  GeometricVector.h
src/math/linearSolver/BiCGSTAB/: solveBiCGSTAB.cpp  solveBiCGSTAB.h
src/math/linearSolver/CG/: solveCG.cpp  solveCG.h
src/math/linearSolver/CGS/: solveCGS.cpp  solveCGS.h
src/math/linearSolver/SOR/: solveSOR.cpp  solveSOR.h
src/math/linearSolver/linearSolverConfig/: LinearSolverConfig.cpp  LinearSolverConfig.h
src/math/linearSolver/preconditioner/: jacobiPreconditioner.cpp  jacobiPreconditioner.h
src/math/sparseMatrix/: SparseMatrix.cpp  SparseMatrix.h  addValue.cpp  getValue.cpp
src/math/tensor/: Tensor.cpp  Tensor.h  determinant.cpp  frobeniusNorm.cpp  invariantP.cpp  invariantQ.cpp  invariantR.cpp  invariantV2.cpp  skewSymmetric.cpp  symmetric.cpp  trace.cpp  transpose.cpp
src/mesh/boundary/: Boundary.cpp  Boundary.h
src/mesh/element/: Element.cpp  Element.h
src/mesh/face/: Face.cpp  Face.h
src/mesh/node/: Node.cpp  Node.h
src/mesh/polyMesh/: PolyMesh.cpp  PolyMesh.h  computeHexahedronCentroid.cpp  computeHexahedronCentroid.h  computeHexahedronVolume.cpp  computeHexahedronVolume.h  computeRectangleArea.cpp  computeRectangleArea.h  computeRectangleCentroid.cpp  computeRectangleCentroid.h  generateBoundaryMesh.cpp  generatePolyMesh.cpp  iterators2ElementVertices.cpp  iterators2ElementVertices.h  writeMesh2VTK.cpp
src/turbulenceModeling/LES/: modelLES.h
src/turbulenceModeling/LES/modelS3PQR/: modelS3PQR.cpp  modelS3PQR.h
src/turbulenceModeling/LES/modelSmagorinsky/: modelSmagorinsky.cpp  modelSmagorinsky.h
src/turbulenceModeling/LES/modelVerstappen/: modelVerstappen.cpp  modelVerstappen.h
src/turbulenceModeling/LES/modelVreman/: modelVreman.cpp  modelVreman.h
src/turbulenceModeling/LES/modelWALE/: modelWALE.cpp  modelWALE.h
src/turbulenceModeling/computeTurbulentViscosity/: computeTurbulentViscosity.cpp  computeTurbulentViscosity.h
